# bench_ws

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: ccpp.yml
configs/autocal/msckf_vio/: euroc.yaml
configs/autocal/orbslam3/: euroc-stereo.yaml  euroc-stereo_imu.yaml
configs/autocal/vins_fusion/: euroc-cam0_pinhole.yaml  (+1 more)
configs/kalibr/: euroc-stereo_imu.yaml
configs/orbslam3/: euroc-stereo_imu.yaml
configs/vins_fusion/: euroc-mono_imu.yaml  euroc-stereo_imu.yaml
docker/: Dockerfile  Makefile
launch/: benchmark_euroc-orbslam3-mono.launch
rviz/: vins_fusion.rviz
scripts/: bench_euroc-orbslam3.bash  bench_euroc-stereo_msckf.bash  bench_euroc-vins_fusion.bash  bench_euroc-vins_mono.bash  benchmark.bash  benchmark_euroc-orbslam3-stereo.bash  benchmark_euroc-orbslam3-stereo_imu.bash  benchmark_euroc-orbslam3.bash  benchmark_euroc-vins_fusion.bash  build_orbslam3.bash  compute_stereo_rectify.py  orbslam3_package.xml  orbslam3_prep_data.py  run.sh  tf.py
scripts/rosutils/: bag2csv.py  benchmark_vio.py  prep_data.py  rosutils.py
src/bench/: CMakeLists.txt  package.xml
src/bench/configs/: vins_fusion-euroc-stereo_imu.yaml  vins_mono-euroc.yaml
src/bench/configs/autocal/orbslam3/: euroc-stereo.yaml  euroc-stereo_imu.yaml
src/bench/configs/autocal/vins_fusion/: euroc-cam0_pinhole.yaml  euroc-cam1_pinhole.yaml  euroc-stereo_imu.yaml
src/bench/configs/kalibr/: camchain.yaml  euroc-stereo.yaml
src/bench/configs/orbslam3/: euroc-stereo_imu.yaml
src/bench/configs/vins_fusion/: euroc-stereo.yaml
src/bench/launch/: benchmark_euroc-msckf_vio.launch  benchmark_euroc-okvis.launch  benchmark_euroc-orbslam3-mono.launch  benchmark_euroc-orbslam3-stereo.launch  benchmark_euroc-orbslam3-stereo_imu.launch  benchmark_euroc-vins_fusion.launch  benchmark_euroc-vins_mono.launch
src/bench/rosutils/: addtime2topic.py  bag2csv.py  bag2imgs.py  bag2vid.py  restamp_bag.py  show_depth.py  show_image.py
src/bench/rosutils/plots/: nav_odometry.gpi
src/bench/rviz/: msckf_vio.rviz  vins_fusion.rviz  vins_mono.rviz
src/bench/src/orbslam3/: ros_mono.cc  ros_mono_inertial.cc  ros_rgbd.cc  ros_stereo.cc  ros_stereo_inertial.cc
src/bench/vocab/: ORBvoc.txt
